assets/css/partials/_setup.scss
///
/// Set up basic theme styles
///
/// These styles are general & miscellaneous both.
/// Mostly it gets the ball rolling.
///

@import '../modules/_colors';
@import '../modules/_typography';

body {
	overflow-y: hidden;
	font-family: $sans;
	line-height: 1.5;
	background:$body_bg;
	color: $text_color;

	&.dark-mode {
		background: $body_bg_dark;
		color: $text_color_dark;

		h1,
		h2,
		h3,
		h4,
		h5,
		h6,
		p,
		ul,
		ol,
		li {
			color: $text_color_dark;
		}

		a,
		a:visited {
			color: $link_color_dark;

			&:hover,
			&.hover,
			&:focus,
			&.focus {
				color: $link_action_color_dark;
			}
		}

		#wpadminbar,
		#wpadminbar .ab-top-menu > li.hover > .ab-item,
		#wpadminbar.nojq .quicklinks .ab-top-menu > li > .ab-item:focus,
		#wpadminbar:not(.mobile) .ab-top-menu > li:hover > .ab-item,
		#wpadminbar:not(.mobile) .ab-top-menu > li > .ab-item:focus,
		#wpadminbar .menupop .ab-sub-wrapper,
		#wpadminbar .shortlink-input {
			background: $dark_gray;
		}
	}
}

.serif {
	font-family: $serif;

	@supports ( font-variation-settings: normal ) {
		font-family: $variable_serif;
	}
}

.entry-content,
.sidebar,
h1,
h2,
h3,
h4,
h5,
h6,
p,
ul,
ol {
	margin-top: 1em;
}

h1,
h2 {
	font-family: $serif;
	font-weight: normal;
	font-style: normal;
	font-variant: small-caps;
	font-variant-caps: small-caps;
	color: $text_dark;

	@supports ( font-variation-settings: normal ) {
		font-family: $variable_serif;
		font-size: 1.5em;
		letter-spacing: 0.025em;
	}

	> a {
		color: $text_dark;
	}
}

h3 {
	font-family: $serif;
	font-size: 1.5em;
	font-weight: 500;
	color: $text_dark;

	@supports ( font-variation-settings: normal ) {
		font-family: $variable_serif;
		font-size: 1.625em;
		font-weight: 450;
	}
}

a {
	color: $link_color;
	text-decoration: none;
	transition: all .15s;
	-webkit-transition: all .15s;
	   -moz-transition: all .15s;
	    -ms-transition: all .15s;
	     -o-transition: all .15s;

	&:visited {
		color: $link_color;
	}

	&:hover,
	&.hover,
	&:focus,
	&.focus {
		color: $link_action_color;
	}
}

.entry-content {
	b,
	strong {
		color: lighten( $color: $text_color, $amount: 10% );
	}

	a {
		b,
		strong {
			color: inherit;
		}
	}
}

#back-to-top {
	display: none;
	position: fixed;
	right: 2rem;
	bottom: 2rem;
	z-index: 500;
	transition: none;
}

// Text meant only for screen readers.
.screen-reader-text {
	border: 0;
	clip: rect(1px, 1px, 1px, 1px);
	-webkit-clip-path: inset( 50% );
	        clip-path: inset( 50% );
	height: 1px;
	margin: -1px;
	overflow: hidden;
	padding: 0;
	position: absolute !important;
	width: 1px;
	word-wrap: normal !important; // Many screen reader and browser combinations announce broken words as they would appear visually.
}

.screen-reader-text:focus {
	border-radius: 3px;
	clip: auto !important;
	-webkit-clip-path: none;
	        clip-path: none;
	display: block;
	font-size: 14px;
	font-size: 0.875rem;
	font-weight: bold;
	height: auto;
	left: 5px;
	line-height: normal;
	padding: 15px 23px 14px;
	text-decoration: none;
	top: 5px;
	width: auto;
	z-index: 100000; // Above user toolbar.
}

